--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    if: contains("Deploy to Pages", github.event.head_commit.message)
+    if: "contains('Deploy to Pages', github.event.head_commit.message)"
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1
