--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.7.1",
+    "prettier": "^2.6.2",
     "sass": "^1.50.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.5",
