--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@types/node": "^17.0.31",
     "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.5",
     "babel-eslint": "^10.1.0",
