--- a/package.json
+++ b/package.json
@@ -15,15 +15,22 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.1.0",
     "@types/node": "^17.0.31",
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.5",
+    "eslint": "^8.14.0",
+    "eslint-plugin-vue": "^8.7.1",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "sass": "^1.50.1",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.5.4",
+    "typescript": "^4.6.4",
     "vite": "^2.9.5",
+    "vite-plugin-eslint": "^1.6.0",
     "vue-tsc": "^0.34.7"
   }
 }
