--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
   "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
-  "vueIndentScriptAndStyle": true,
+  "vueIndentScriptAndStyle": false,
   "importOrder": ["^@/components/(.*)$", "^@/(.*)$", "^[./]", "^(.css)$" ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true
