--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "dayjs": "^1.11.2",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
+    "vue-i18n": "9",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@rushstack/eslint-patch": "^1.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "^17.0.31",
@@ -29,6 +31,8 @@
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "sass": "^1.50.1",
+    "stylelint": "^14.8.2",
+    "stylelint-config-recommended": "^7.0.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.4",
     "vite": "^2.9.5",
