change org to club

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,7 @@ jobs:
           npm run build
           cd dist
           touch CNAME
-          echo "genshin.zenless.org" > CNAME
+          echo "genshin.zenless.club" > CNAME
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.5
