--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
   "name": "gvp",
-  "private": true,
-  "version": "0.0.1",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "gh-pages": "vue-tsc --noEmit && vite build --base=/trying-vue/",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5050",
+    "typecheck": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "dayjs": "^1.11.2",
-    "pinia": "^2.0.14",
-    "vue": "^3.2.25",
-    "vue-i18n": "9",
+    "pinia": "^2.0.13",
+    "vue": "^3.2.33",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@rushstack/eslint-patch": "^1.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/node": "^17.0.31",
+    "@types/node": "^16.11.27",
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.5",
-    "eslint": "^8.14.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.5.0",
+    "eslint-plugin-vue": "^8.2.0",
     "postcss": "^8.4.13",
-    "prettier": "^2.6.2",
-    "sass": "^1.50.1",
+    "prettier": "^2.5.1",
+    "sass": "^1.51.0",
     "stylelint": "^14.8.2",
     "stylelint-config-recommended": "^7.0.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4",
+    "typescript": "~4.6.3",
     "vite": "^2.9.5",
-    "vite-plugin-eslint": "^1.6.0",
     "vue-tsc": "^0.34.7"
   }
 }
