--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@rushstack/eslint-patch": "^1.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^16.11.27",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
@@ -29,6 +30,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.4.13",
     "prettier": "^2.5.1",
     "sass": "^1.51.0",
