headlessui seems to be a useful library

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.6.3",
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@rushstack/eslint-patch": "^1.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
