--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "dayjs": "^1.11.2",
-    "pinia": "^2.0.13",
-    "vue": "^3.2.33",
+    "pinia": "^2.0.14",
+    "vue": "^3.2.36",
     "vue-i18n": "^9.1.10",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
-    "@headlessui/vue": "^1.6.3",
+    "@headlessui/vue": "1.6.1",
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@rushstack/eslint-patch": "^1.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
