--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "@vueuse/core": "^8.5.0",
+    "@vueuse/head": "^0.7.6",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
