--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/lodash-es": "^4.17.6",
+    "@types/marked": "^4.0.3",
     "@types/node": "^16.11.27",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
@@ -33,6 +34,7 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "lodash-es": "^4.17.21",
+    "marked": "^4.0.16",
     "postcss": "^8.4.13",
     "prettier": "^2.5.1",
     "sass": "^1.51.0",
