--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,7 +6,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'deploy')
+    if: false  # since cf pages are used that's how we are going to disable this workflow
+    # if: contains(github.event.head_commit.message, 'deploy')
     steps:
       - name: Checkout
         uses: actions/checkout@v3
