--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,5 @@
   "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
-  "vueIndentScriptAndStyle": false,
+  "vueIndentScriptAndStyle": false
 }
