--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^16.11.27",
+    "@types/sharp": "^0.30.4",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -31,10 +32,12 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "globby": "^13.1.2",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.13",
     "prettier": "^2.5.1",
     "sass": "^1.51.0",
+    "sharp": "^0.30.6",
     "stylelint": "^14.8.2",
     "stylelint-config-recommended": "^7.0.0",
     "tailwindcss": "^3.1.2",
