--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "gvp",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "dev": "node generatePublicWebpImages.mjs && vite",
+    "build": "node generatePublicWebpImages.mjs -r true && vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
@@ -30,6 +30,7 @@
     "@vue/tsconfig": "^0.1.3",
     "@vueuse/head": "^0.7.6",
     "autoprefixer": "^10.4.7",
+    "commander": "^9.3.0",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "globby": "^13.1.2",
