--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "@vueuse/core": "^8.5.0",
+    "@vueuse/integrations": "^8.6.0",
     "dayjs": "^1.11.2",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.37",
     "vue-i18n": "^9.1.10",
@@ -22,6 +24,7 @@
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^16.11.27",
+    "@types/nprogress": "^0.2.0",
     "@types/sharp": "^0.30.4",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
