--- a/package.json
+++ b/package.json
@@ -7,31 +7,18 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/tailwindcss": "^5.1.3",
     "@types/lodash-es": "^4.17.6",
-    "@vueuse/nuxt": "^8.7.5",
-    "commander": "^9.3.0",
-    "eslint": "^8.18.0",
-    "eslint-plugin-vue": "^9.1.1",
-    "globby": "^13.1.2",
+    "@vueuse/core": "^8.7.5",
     "lodash-es": "^4.17.21",
     "nuxt": "3.0.0-rc.4",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "sass": "^1.52.3",
-    "sharp": "^0.30.6",
-    "stylelint": "^14.9.1",
-    "tailwindcss": "^3.1.4",
-    "typescript": "^4.7.4"
+    "sass": "^1.52.3"
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
-    "@nuxtjs/composition-api": "^0.32.0",
     "@pinia/nuxt": "^0.1.9",
-    "@vueuse/core": "^8.7.5",
-    "dayjs": "^1.11.3",
     "pinia": "^2.0.14",
-    "remove": "^0.1.5",
     "vue": "^3.2.37",
     "zod": "^3.17.3"
   }
