--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@nuxtjs/tailwindcss": "^5.1.3",
     "@types/lodash-es": "^4.17.6",
     "@vueuse/core": "^8.7.5",
+    "commander": "^9.3.0",
+    "globby": "^13.1.2",
     "lodash-es": "^4.17.21",
     "nuxt": "3.0.0-rc.4",
-    "sass": "^1.52.3"
+    "sass": "^1.52.3",
+    "sharp": "^0.30.6"
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
