--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/tailwindcss": "^5.1.3",
     "@types/lodash-es": "^4.17.6",
     "@vueuse/core": "^8.7.5",
+    "@vueuse/nuxt": "^8.7.5",
     "commander": "^9.3.0",
     "globby": "^13.1.2",
     "lodash-es": "^4.17.21",
