--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lodash-es": "^4.17.21",
     "nuxt": "3.0.0-rc.4",
     "sass": "^1.52.3",
-    "sharp": "^0.30.6"
+    "sharp": "^0.30.6",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
