--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/tailwindcss": "^5.1.3",
     "@types/lodash-es": "^4.17.6",
+    "@types/nprogress": "^0.2.0",
     "@vueuse/core": "^8.7.5",
     "@vueuse/nuxt": "^8.7.5",
     "commander": "^9.3.0",
     "globby": "^13.1.2",
     "lodash-es": "^4.17.21",
+    "nprogress": "^0.2.0",
     "nuxt": "3.0.0-rc.4",
     "sass": "^1.52.3",
     "sharp": "^0.30.6",
