--- a/package.json
+++ b/package.json
@@ -1,36 +1,32 @@
 {
+  "name": "genshin-zenless-club",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prebuild": "node generatePublicWebpImages.mjs -r",
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "pregenerate": "node generatePublicWebpImages.mjs -r",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview"
-  },
-  "devDependencies": {
-    "@nuxtjs/color-mode": "^3.1.4",
-    "@nuxtjs/tailwindcss": "^5.1.3",
-    "@types/lodash-es": "^4.17.6",
-    "@types/nprogress": "^0.2.0",
-    "@vueuse/core": "^8.7.5",
-    "@vueuse/nuxt": "^8.7.5",
-    "commander": "^9.3.0",
-    "globby": "^13.1.2",
-    "lodash-es": "^4.17.21",
-    "nprogress": "^0.2.0",
-    "nuxt": "3.0.0-rc.4",
-    "sass": "^1.52.3",
-    "sharp": "^0.30.6",
-    "typescript": "^4.7.4"
+    "dev": "next dev",
+    "build": "next build",
+    "preexport": "next build",
+    "export": "next export",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.6",
-    "@pinia/nuxt": "^0.1.9",
-    "dayjs": "^1.11.3",
-    "pinia": "^2.0.14",
-    "pinia-plugin-persistedstate": "^1.6.1",
-    "vue": "^3.2.37",
+    "next": "12.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
+    "eslint": "8.18.0",
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "sass": "^1.53.0",
+    "tailwindcss": "^3.1.4",
+    "typescript": "4.7.4",
     "zod": "^3.17.3"
   }
 }
