(cloudflare) this is for cloudflare pages
CF Pages treat this project as SPA if there's no 404.html in the output directory

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt dev",
     "pregenerate": "node generatePublicWebpImages.mjs -r",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "cloudflare": "npm run generate && node cloudflarePagesFix.mjs"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.1.4",
