--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "devDependencies": {
     "@heroicons/react": "^1.0.6",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.4.14",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.4",
