--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
-    "cloudflare": "npm run export"
+    "cloudflare": "node generatePublicWebpImages.mjs -r && npm run export"
   },
   "dependencies": {
     "dayjs": "^1.11.3",
