--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "commander": "^9.3.0",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "globby": "^13.1.2",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.14",
     "sass": "^1.53.0",
+    "sharp": "^0.30.7",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4",
     "zod": "^3.17.3"
