--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-themes": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
