added progress bar on navigations

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.3",
     "next": "12.1.6",
     "next-themes": "^0.2.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use": "^17.4.0",
@@ -24,6 +25,7 @@
     "@heroicons/react": "^1.0.6",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "18.0.0",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
