--- a/package.json
+++ b/package.json
@@ -1,44 +1,37 @@
 {
-  "name": "genshin-zenless-club",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "preexport": "next build",
-    "export": "next export",
-    "start": "next start",
-    "lint": "next lint",
-    "cloudflare": "node generatePublicWebpImages.mjs -r && npm run export"
-  },
-  "dependencies": {
-    "dayjs": "^1.11.3",
-    "next": "12.1.6",
-    "next-themes": "^0.2.0",
-    "nprogress": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-use": "^17.4.0",
-    "swr": "^1.3.0"
+    "prebuild": "node generatePublicWebpImages.mjs -r",
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "pregenerate": "node generatePublicWebpImages.mjs -r",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "cloudflare": "npm run generate && node cloudflarePagesFix.mjs"
   },
   "devDependencies": {
-    "@heroicons/react": "^1.0.6",
+    "@nuxtjs/color-mode": "^3.1.4",
+    "@nuxtjs/tailwindcss": "^5.1.3",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "18.0.0",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "autoprefixer": "^10.4.7",
+    "@vueuse/core": "^8.7.5",
+    "@vueuse/nuxt": "^8.7.5",
     "commander": "^9.3.0",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
     "globby": "^13.1.2",
     "lodash-es": "^4.17.21",
-    "postcss": "^8.4.14",
-    "sass": "^1.53.0",
-    "sharp": "^0.30.7",
-    "tailwindcss": "^3.1.4",
-    "typescript": "4.7.4",
+    "nprogress": "^0.2.0",
+    "nuxt": "3.0.0-rc.4",
+    "sass": "^1.52.3",
+    "sharp": "^0.30.6",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "@heroicons/vue": "^1.0.6",
+    "@pinia/nuxt": "^0.1.9",
+    "dayjs": "^1.11.3",
+    "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^1.6.1",
+    "vue": "^3.2.37",
     "zod": "^3.17.3"
   }
 }
