--- a/package.json
+++ b/package.json
@@ -12,15 +12,27 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/tailwindcss": "^5.1.3",
+    "@rushstack/eslint-patch": "^1.1.3",
     "@types/lodash-es": "^4.17.6",
     "@types/nprogress": "^0.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-standard": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "@vueuse/core": "^8.7.5",
     "@vueuse/nuxt": "^8.7.5",
     "commander": "^9.3.0",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^9.1.1",
     "globby": "^13.1.2",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "nuxt": "3.0.0-rc.4",
+    "prettier": "^2.7.1",
     "sass": "^1.52.3",
     "sharp": "^0.30.6",
     "typescript": "^4.7.4"
