--- a/package.json
+++ b/package.json
@@ -1,49 +1,44 @@
 {
+  "name": "genshin-zenless-club",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prebuild": "node generatePublicWebpImages.mjs -r",
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "pregenerate": "node generatePublicWebpImages.mjs -r",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "cloudflare": "nuxt generate && node cloudflarePagesFix.mjs"
-  },
-  "devDependencies": {
-    "@nuxtjs/color-mode": "^3.1.4",
-    "@nuxtjs/tailwindcss": "^5.1.3",
-    "@rushstack/eslint-patch": "^1.1.3",
-    "@types/lodash-es": "^4.17.6",
-    "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-standard": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vueuse/core": "^8.7.5",
-    "@vueuse/nuxt": "^8.7.5",
-    "commander": "^9.3.0",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-nuxt": "^3.2.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^9.1.1",
-    "globby": "^13.1.2",
-    "lodash-es": "^4.17.21",
-    "nprogress": "^0.2.0",
-    "nuxt": "3.0.0-rc.4",
-    "prettier": "^2.7.1",
-    "sass": "^1.52.3",
-    "sharp": "^0.30.6",
-    "typescript": "^4.7.4"
+    "dev": "next dev",
+    "build": "next build",
+    "preexport": "next build",
+    "export": "next export",
+    "start": "next start",
+    "lint": "next lint",
+    "cloudflare": "node generatePublicWebpImages.mjs -r && npm run export"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.6",
-    "@pinia/nuxt": "^0.1.9",
     "dayjs": "^1.11.3",
-    "pinia": "^2.0.14",
-    "pinia-plugin-persistedstate": "^1.6.1",
-    "vue": "^3.2.37",
+    "next": "12.1.6",
+    "next-themes": "^0.2.0",
+    "nprogress": "^0.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
+    "swr": "^1.3.0"
+  },
+  "devDependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@types/lodash-es": "^4.17.6",
+    "@types/node": "18.0.0",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
+    "commander": "^9.3.0",
+    "eslint": "8.18.0",
+    "eslint-config-next": "12.1.6",
+    "globby": "^13.1.2",
+    "lodash-es": "^4.17.21",
+    "postcss": "^8.4.14",
+    "sass": "^1.53.0",
+    "sharp": "^0.30.7",
+    "tailwindcss": "^3.1.4",
+    "typescript": "4.7.4",
     "zod": "^3.17.3"
   }
 }
