--- a/package.json
+++ b/package.json
@@ -28,13 +28,19 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "autoprefixer": "^10.4.7",
     "commander": "^9.3.0",
-    "eslint": "8.18.0",
+    "eslint": "^8.18.0",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.1.1",
+    "eslint-plugin-import": "^2.26.0",
     "globby": "^13.1.2",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "sharp": "^0.30.7",
     "tailwindcss": "^3.1.4",
