--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
           ["parent", "sibling", "index"],
           "unknown"
         ],
-        "newlines-between": "never",
+        "newlines-between": "always",
         "alphabetize": {
           "order": "asc",
           "caseInsensitive": true
