eslint is annoying at this point

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
     "es6": true
   },
   "rules": {
+    "@typescript-eslint/require-await": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
     "@next/next/no-img-element": "off",
     "react-hooks/exhaustive-deps": "off",
     "no-shadow": 1,
