I might be spending more time configuring eslint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,7 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "editor.tabSize": 2,
   "eslint.enable": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  }
 }
