--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@heroicons/react": "^1.0.6",
+    "@next/eslint-plugin-next": "^12.1.6",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "18.0.0",
     "@types/nprogress": "^0.2.0",
@@ -37,6 +38,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.1.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.1.0",
     "globby": "^13.1.2",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.14",
