--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "importsNotUsedAsValues": "error",
     "baseUrl": "./",
     "paths": {
       "@/*": ["./*"]
