--- a/cliff.toml
+++ b/cliff.toml
@@ -3,22 +3,27 @@
 [changelog]
 # changelog header
 header = """
-# Changelog\n
+# Changelog\n\n
 """
 # template for the changelog body
 # https://tera.netlify.app/docs/#introduction
 body = """
 {% if version %}\
-    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
+    ## ({{ version }}) - {{ timestamp | date(format="%Y-%m-%d") }}
 {% else %}\
     ## [unreleased]
 {% endif %}\
 {% for group, commits in commits | group_by(attribute="group") %}
     ### {{ group | upper_first }}
-    {% for commit in commits %}
-        - {% if commit.breaking %}[**breaking**] {% endif %}{{ commit.message | upper_first }}\
-    {% endfor %}
-{% endfor %}\n
+    {% for commit in commits | filter(attribute="scope") | sort(attribute="scope") %}
+        - **{{commit.scope}}:** {{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}]({{ commit.id }}))\
+    {%- endfor -%}
+    {%- for commit in commits -%}
+    {% if not commit.scope %}
+        - **No category:** {{ commit.message | upper_first }} ([{{ commit.id | truncate(length=7, end="") }}]({{ commit.id }}))\
+    {% endif %}
+    {%- endfor %}
+{% endfor %}\n\n\n
 """
 # remove the leading and trailing whitespace from the template
 trim = true
