refactor: moved everything in `src/` directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,9 @@
     "jsx": "preserve",
     "incremental": true,
     "importsNotUsedAsValues": "error",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
