--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "guides"]
-	path = data/guides/compiled
+	path = src/data/guides/compiled
 	url = https://github.com/TenkoSpirit/zenless-club-genshin-guides.git
 	branch = guides-compiled
