--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.1.0",
     "globby": "^13.1.2",
+    "jotai": "^1.7.3",
     "lodash-es": "^4.17.21",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
