--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "private": true,
   "scripts": {
     "postinstall": "next telemetry disable",
-    "dev": "next dev",
-    "build": "next build",
-    "preexport": "next build",
-    "export": "next export",
+    "dev": "run-s dev:*",
+    "dev:next": "next dev",
+    "build": "run-s build:*",
+    "build:next": "next build",
+    "export": "run-s export:*",
+    "export:buld": "next build",
+    "export:next": "next export",
     "start": "next start",
     "lint": "next lint",
-    "cloudflare": "npm run export"
+    "cloudflare": "run-s export"
   },
   "dependencies": {
     "dayjs": "^1.11.3",
-    "next": "12.1.6",
+    "jotai": "~1.7.4",
+    "next": "~12.2.2",
     "next-themes": "^0.2.0",
     "nprogress": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
     "react-use": "^17.4.0",
     "swr": "^1.3.0"
   },
@@ -26,23 +30,23 @@
     "@heroicons/react": "^1.0.6",
     "@next/eslint-plugin-next": "^12.1.6",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "18.0.0",
+    "@types/node": "18.0.3",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "autoprefixer": "^10.4.7",
     "commander": "^9.3.0",
     "eslint": "^8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "12.2.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.1.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.1.0",
     "globby": "^13.1.2",
-    "jotai": "^1.7.3",
     "lodash-es": "^4.17.21",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
