--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@typescript-eslint/parser": "^5.30.0",
     "autoprefixer": "^10.4.7",
     "commander": "^9.3.0",
+    "cypress": "^10.3.0",
     "eslint": "^8.18.0",
     "eslint-config-next": "12.2.2",
     "eslint-config-prettier": "^8.5.0",
