--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@heroicons/react": "^1.0.6",
     "@next/eslint-plugin-next": "^12.1.6",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.3",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "18.0.3",
     "@types/nprogress": "^0.2.0",
@@ -53,6 +55,7 @@
     "sass": "^1.53.0",
     "sharp": "^0.30.7",
     "tailwindcss": "^3.1.4",
+    "tw-elements": "^1.0.0-alpha12",
     "typescript": "4.7.4",
     "zod": "^3.17.3"
   }
