--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "dayjs": "^1.11.3",
     "jotai": "~1.7.4",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isempty": "^4.4.0",
     "next": "~12.2.2",
     "next-themes": "^0.2.0",
     "nprogress": "^0.2.0",
@@ -32,6 +34,8 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.3",
     "@types/lodash-es": "^4.17.6",
+    "@types/lodash.debounce": "^4.0.7",
+    "@types/lodash.isempty": "^4.4.7",
     "@types/node": "18.0.3",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.15",
@@ -48,7 +52,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.1.0",
     "globby": "^13.1.2",
-    "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
