--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isempty": "^4.4.0",
     "next": "~12.2.2",
+    "next-i18next": "^11.2.1",
     "next-themes": "^0.2.0",
     "nprogress": "^0.2.0",
     "react": "~18.2.0",
