--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "cloudflare": "run-s export"
   },
   "dependencies": {
-    "dayjs": "^1.11.3",
-    "jotai": "~1.7.4",
+    "dayjs": "^1.11.4",
+    "jotai": "~1.7.5",
     "lodash.debounce": "^4.0.8",
     "lodash.isempty": "^4.4.0",
     "next": "~12.2.2",
@@ -25,28 +25,29 @@
     "nprogress": "^0.2.0",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "zod": "^3.17.9"
   },
   "devDependencies": {
     "@heroicons/react": "^1.0.6",
     "@next/eslint-plugin-next": "^12.1.6",
     "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/lodash-es": "^4.17.6",
     "@types/lodash.debounce": "^4.0.7",
     "@types/lodash.isempty": "^4.4.7",
-    "@types/node": "18.0.3",
+    "@types/node": "18.0.6",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "autoprefixer": "^10.4.7",
-    "commander": "^9.3.0",
-    "eslint": "^8.18.0",
+    "commander": "^9.4.0",
+    "eslint": "^8.20.0",
     "eslint-config-next": "12.2.2",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.1.1",
+    "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.1.0",
     "globby": "^13.1.2",
@@ -55,8 +56,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "sharp": "^0.30.7",
-    "tailwindcss": "^3.1.4",
-    "typescript": "4.7.4",
-    "zod": "^3.17.3"
+    "tailwindcss": "^3.1.6",
+    "typescript": "4.7.4"
   }
 }
