--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.isempty": "^4.4.0",
     "next": "~12.2.2",
     "next-themes": "^0.2.0",
+    "next-translate": "^1.5.0",
     "nprogress": "^0.2.0",
     "react": "~18.2.0",
     "react-dom": "~18.2.0",
