--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:next": "next dev",
     "build": "run-s build:*",
     "build:next": "next build",
+    "postbuild": "next-sitemap",
     "export": "run-s export:*",
     "export:buld": "next build",
     "export:next": "next export",
@@ -21,6 +22,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isempty": "^4.4.0",
     "next": "~12.2.2",
+    "next-sitemap": "^3.1.11",
     "next-themes": "^0.2.0",
     "next-translate": "^1.5.0",
     "nprogress": "^0.2.0",
