--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-translate": "^1.5.0",
     "nprogress": "^0.2.0",
     "react": "~18.2.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "~18.2.0",
     "swr": "^1.3.0",
     "zod": "^3.17.10"
@@ -57,6 +58,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "rehype-preset-minify": "^6.0.0",
     "rehype-sanitize": "^5.0.1",
     "rehype-slug": "^5.0.1",
