--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isempty": "^4.4.0",
     "next": "~12.2.2",
+    "next-i18next": "^11.3.0",
     "next-sitemap": "^3.1.16",
     "next-themes": "^0.2.0",
-    "next-translate": "^1.5.0",
     "nprogress": "^0.2.0",
     "react": "~18.2.0",
     "react-country-flag": "^3.0.2",
