--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isempty": "^4.4.0",
     "next": "~12.3.0",
-    "next-i18next": "^12.0.1",
+    "next-intl": "^2.7.5",
     "next-sitemap": "^3.1.21",
     "next-themes": "^0.2.0",
     "nprogress": "^0.2.0",
