Revert "feat(app): migrate from `next-i18next` to `next-intl`"
This reverts commit d8d5501bb219746490da345eb8d3dd31e075550a.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
     "importsNotUsedAsValues": "error",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "#/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
