--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "cloudflare": "run-s export"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "4.3.1",
     "jotai": "~1.8.3",
     "lodash.debounce": "^4.0.8",
     "lodash.isempty": "^4.4.0",
     "next": "~12.3.0",
+    "next-auth": "^4.10.3",
     "next-intl": "^2.7.5",
     "next-sitemap": "^3.1.21",
     "next-themes": "^0.2.0",
@@ -57,6 +60,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.3.1",
     "rehype-preset-minify": "^6.0.0",
     "rehype-sanitize": "^5.0.1",
     "rehype-slug": "^5.0.1",
