feat(prisma): changed default prisma client generation output directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"],
-      "#/*": ["./*"]
+      "#/*": ["./*"],
+      "#prisma/client": ["./prisma/lib/client"]
     },
     "skipLibCheck": true,
 
