feat(env): added more env varaibles

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ DATABASE_URL="file:./data.db?connection_limit=1"
 REDIS_URL="redis://127.0.0.1:6379/0"
 SESSION_SECRET="super-duper-s3cret"
 SALT_ROUNDS=123123
+
+DISCORD_CLIENT_ID="123124124"
+DISCORD_CLIENT_SECRET="asdasdasdasdasd"
+DISCORD_REDIRECT_URI="http://localhost:3000/me/link/discord/callback"
+DISCORD_OAUTH_URL="https://discord.com/api/oauth2/authorize?client_id=1231245125&redirect_uri=addsaasdads&response_type=code&scope=identify"
