feat(env): updated variables

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,9 @@ SALT_ROUNDS=123123
 
 DISCORD_CLIENT_ID="123124124"
 DISCORD_CLIENT_SECRET="asdasdasdasdasd"
-DISCORD_REDIRECT_URI="http://localhost:3000/me/link/discord/callback"
-DISCORD_OAUTH_URL="https://discord.com/api/oauth2/authorize?client_id=1231245125&redirect_uri=addsaasdads&response_type=code&scope=identify"
+
+DISCORD_LINK_ACCOUNT_REDIRECT_URI="http://localhost:3000/me/link/discord/callback"
+DISCORD_LINK_ACCOUNT_OAUTH_URL="https://discord.com/api/oauth2/authorize?asdasdadsads"
+
+DISCORD_LOGIN_REDIRECT_URI="http://localhost:3000/login/discord/callback"
+DISCORD_LOGIN_OAUTH_URL="https://discord.com/api/oauth2/authorize?gmfgjsdsdg
