chore(deps): rehype plugins

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-raw": "^6.1.1",
+    "rehype-sanitize": "^5.0.1",
     "rehype-slug": "^5.0.1",
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
@@ -61,6 +62,7 @@
     "remark-rehype": "^10.1.0",
     "tiny-invariant": "^1.2.0",
     "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.1",
     "use-intl": "^2.8.0",
     "zod": "^3.19.1"
   },
