feat: switch to PostCSS from Tailwind CLI

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "build:server": "node build.mjs",
     "dev": "run-s build:* && run-p dev:*",
     "dev:build": "cross-env NODE_ENV=development npm run build:server -- --watch",
-    "dev:css": "cross-env NODE_ENV=development npm run generate:css -- --watch",
+    "dev:css": "cross-env NODE_ENV=development npm run generate:css -- --watch --verbose",
     "dev:remix": "cross-env NODE_ENV=development remix watch",
     "dev:server": "cross-env NODE_ENV=development node --inspect --require ./node_modules/dotenv/config ./build/server.js",
     "docker": "docker-compose up -d",
     "format": "prettier --write .",
-    "generate:css": "tailwindcss --minify -i ./app/styles/index.css -o ./app/styles/tailwind.css",
+    "generate:css": "postcss ./app/styles/index.css -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma generate && prisma migrate deploy && prisma db seed",
     "start": "cross-env NODE_ENV=production node --require ./node_modules/dotenv/config ./build/server.js",
