chore(deps): added `nanoid`

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "isbot": "^3.6.5",
     "jotai": "^1.9.2",
     "morgan": "^1.10.0",
+    "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
