feat: updated `.env.example`

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ DISCORD_LINK_ACCOUNT_OAUTH_URL="https://discord.com/api/oauth2/authorize?asdasda
 
 DISCORD_LOGIN_REDIRECT_URI="http://localhost:3000/login/discord/callback"
 DISCORD_LOGIN_OAUTH_URL="https://discord.com/api/oauth2/authorize?gmfgjsdsdg
+
+S3_DOMAIN="https://s3.example.com"
+S3_ENDPOINT="https://s3.provider.com"
+S3_BUCKET="bucket-name"
+S3_REGION="us-1"
+S3_ACCESS_KEY="yourkey"
+S3_SECRET_ACCESS_KEY="yoursecretkey"
