chore(vscode): adjusted file associations and exclude pattern for CSS extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,9 @@
   },
   "tailwindCSS.experimental.classRegex": [
     ["cva\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
-  ]
+  ],
+  "html-css-class-completion.excludeGlobPattern": "*tailwind.css",
+  "files.associations": {
+    "*.css": "tailwindcss"
+}
 }
