chore(deps): added daisyui

--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
     "/public/build"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.289.0",
-    "@formatjs/intl": "^2.6.7",
+    "@aws-sdk/client-s3": "^3.299.0",
+    "@formatjs/intl": "^2.6.9",
     "@formkit/auto-animate": "^1.0.0-beta.6",
     "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.2",
     "@heroicons/react": "^2.0.16",
     "@prisma/client": "4.11.0",
-    "@remix-run/css-bundle": "^1.14.1",
-    "@remix-run/express": "^1.14.1",
-    "@remix-run/node": "^1.14.1",
-    "@remix-run/react": "^1.14.1",
+    "@remix-run/css-bundle": "^1.14.3",
+    "@remix-run/express": "^1.14.3",
+    "@remix-run/node": "^1.14.3",
+    "@remix-run/react": "^1.14.3",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
@@ -47,12 +47,13 @@
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
+    "daisyui": "^2.51.5",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "ioredis": "^5.3.1",
-    "isbot": "^3.6.6",
+    "isbot": "^3.6.7",
     "jotai": "^2.0.3",
-    "lucide-react": "^0.122.0",
+    "lucide-react": "^0.127.0",
     "morgan": "^1.10.0",
     "nanoid": "^4.0.1",
     "nprogress": "^0.2.0",
@@ -67,38 +68,38 @@
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "remix-utils": "^6.0.0",
-    "sharp": "^0.31.3",
+    "sharp": "^0.32.0",
     "superjson": "^1.12.2",
     "tiny-invariant": "^1.2.0",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
-    "use-intl": "^2.11.0",
+    "use-intl": "^2.12.0",
     "validator": "^13.9.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.14.1",
+    "@remix-run/dev": "^1.14.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@types/accept-language-parser": "^1.5.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/eslint": "^8.21.1",
-    "@types/node": "^18.15.0",
+    "@types/eslint": "^8.21.3",
+    "@types/node": "^18.15.9",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "@types/sharp": "^0.31.1",
-    "@types/validator": "^13.7.13",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@types/validator": "^13.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
     "chalk": "4.1.2",
     "commander": "^9.5.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.15",
-    "esbuild": "^0.17.11",
+    "esbuild": "^0.17.13",
     "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
@@ -106,12 +107,12 @@
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.4",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.5",
     "prisma": "4.11.0",
     "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
   },
   "engines": {
     "node": ">=18"
